--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Pre-Entrega 1 de Matias Baldanza — Curso de Javascript, Comisión 34150, CoderHouse 2023</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="assets/favicon-matiasbaldanza-16x16.png">
     <script src="condicional.js" defer type="module"></script>
     
     <link rel="stylesheet" href="imports/default.min.css">
@@ -64,7 +65,7 @@ function esPotenciaDe(numero, potencia) {
                 <summary>
                     <button onclick="">Correr Tests</button>
                 </summary>
-                <pre class="test-output"></pre>
+                <pre class="tests-output"></pre>
             </details>
         </div>
         
