FEAT: modularized ad-hoc testing library (only shows tests in console)
testsUtils.js 		includes the assert() and displayTests() functions
condicional.tests.js	includes the tests for the condicional.js module
index.js		is imported in index.html and includes the event listeners and initial code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="assets/favicon-matiasbaldanza-16x16.png">
-    <script src="condicional.js" defer type="module"></script>
+    <script src="index.js" defer type="module"></script>
     
     <link rel="stylesheet" href="imports/default.min.css">
 </head>
@@ -63,7 +63,7 @@ function esPotenciaDe(numero, potencia) {
                     </pre>
                 </details>
                 <details open>
-                    <summary class="button" onclick="console.log('clicked');">
+                    <summary tests-button class="button">
                         Correr Tests
                     </summary>
                     <pre class="tests-output"></pre>
