--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
                     Devuelve un <code>boolean</code> (<code>true</code> si <code>numero</code> es potencia de <code>exponente</code> o <code>false</code> si no lo es).</p>
                 </p>
             </div>
-            <div class="reveal">
-                <details open>
+
+            <!-- Show code -->
+            <details open>
                     <summary>Código</summary>
                     <pre>
-<code class="language-javascript">
+                        <code class="language-javascript">
 function esPotenciaDe(numero, potencia) {
     // caso base
     if (numero === 1) {
@@ -58,17 +59,19 @@ function esPotenciaDe(numero, potencia) {
     } else {
         return false;
     }
-}
-</code>
-                    </pre>
-                </details>
-                <details open>
-                    <summary tests-button class="button">
-                        Correr Tests
-                    </summary>
-                    <pre class="tests-output"></pre>
-                </details>
-            </div>
+}                       </code></pre>
+            </details>
+
+            <!-- Show test cases -->
+            <details>
+                <summary tests-button class="button">
+                    Correr Tests
+                </summary>
+                <pre><code class="tests-output"></code></pre>
+            </details>
+
+
+
         
         
         </section>
